Commit Raül Valls

--- a/css/estils.css
+++ b/css/estils.css
@@ -86,3 +86,11 @@ figure{
 .imatge{
 	width:200px;
 }
+
+.imatgegran{
+	width: 600px;
+}
+
+#principal figure.fonsraul{
+	background-color: orange;
+}
